k8s/comments-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-api-service
  namespace: comments
spec:
  selector:
    app: comments-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
