k8s/comments-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comments-api-ingress
  namespace: comments
  annotations:
    nginx.ingress.kubernetes.io/rate-limit: "20"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: api.victorianduka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comments-api-service
                port:
                  number: 80
